# radar-backend

./: .env.example  .gitignore  AGENTS.md  ProblmeStatement.md  README.md  docker-compose.yml  graph_orchestrator.py  main.py  pyproject.toml  run_server.py  start_server.sh  test_category_batching.py  test_category_batching_result.json  test_dynamic_result.json  test_orchestration_result.json  test_visibility_orchestration.py  visualize_agent.py  visualize_visibility_orchestrator.py
agents/: ai_model_tester.py  industry_detector.py  query_generator.py  scorer_analyzer.py
config/: database.py  settings.py
docs/: AGENTS.md  AGENTS_SUMMARY.md  AGENT_AI_MODEL_TESTER.md  AGENT_INDUSTRY_DETECTOR.md  AGENT_QUERY_GENERATOR.md  AGENT_SCORER_ANALYZER.md  API_ENDPOINTS.md  API_SIMPLE_CACHING.md  API_STREAMING_STRUCTURE.md  ARCHITECTURE.md  CSV_EXPORT.md  INTEGRATION_DIAGRAM.md  INTEGRATION_GUIDE.md  INTEGRATION_TEST_RESULTS.md  LANGGRAPH_MIGRATION.md  LLM_PROVIDER_CONFIGURATION.md  ORCHESTRATION.md  README.md  SMART_ENDPOINTS.md  VISIBILITY_ORCHESTRATION.md
models/: schemas.py
scripts/: init_databases.py
src/: __init__.py  app.py
storage/: rag_store.py
tests/: demo.html  test_api_client.py  test_cache_keys.py  test_complete_integration.py  test_e2e.py  test_enhanced_scorer.py  test_model_tester.py  test_multi_model.py  test_parallel_analysis.py  test_parallel_flow.py  test_query_cache.py  test_query_generator_simple.py  test_streaming_cache.py  test_streaming_detailed.py  test_workflow_structure.py
utils/: __init__.py  cache.py  competitor_matcher.py  helpers.py  (+1 more)
(+56 files in other folders)
